--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
 	  }
 	  
 	  message += "<br><br> Thanks Coach!";
-	  message += "<br> -Erica Cradeur";
 
 	  document.getElementById("outputDiv").innerHTML = message;
 	  //DispWin.document.write(message);
@@ -162,7 +161,7 @@
 			</label>
 			<label for="stressed" id="stressed">Stressed</label>
 
-			<label class="workoutContainer">
+			<br><label class="workoutContainer">
 				<input type="checkbox" id="dehydratedID">
 				<span class="checkmark"></span>
 			</label>
