--- a/index.html
+++ b/index.html
@@ -65,14 +65,12 @@
 	  	message += "injured <br>";
 	  }
 
-	  var copyText = message;
-	  copyText.select();
-	  copyText.setSelectionRange(0, 99999);
-	  document.execCommand("copy");
-	  alert("copied log");
-
 	  document.getElementById("outputDiv").innerHTML = message;
 	  //DispWin.document.write(message);
+	  message.select();
+	  message.setSelectionRange(0, 99999);
+	  document.execCommand("copy");
+	  alert("copied log");
 	}
 </script>
 
