--- a/index.html
+++ b/index.html
@@ -64,13 +64,16 @@
 	  if(document.querySelector('#injuredID:checked') !== null){
 	  	message += "injured <br>";
 	  }
-
 	  document.getElementById("outputDiv").innerHTML = message;
 	  //DispWin.document.write(message);
-	  message.select();
-	  message.setSelectionRange(0, 99999);
-	  document.execCommand("copy");
-	  alert("copied log");
+	}
+
+	function copy(){
+		var copyText = document.getElementById("message");
+		copyText.select();
+	  	copyText.setSelectionRange(0, 99999);
+	  	document.execCommand("copy");
+	  	alert("Copied Log!");
 	}
 </script>
 
@@ -174,6 +177,7 @@
 		</div>
 		</form>
   		<input type="button" value="Generate" id="submit" onClick="display();">
+  		<button id="copy" onClick="copy();">Copy</button>
   		<a href="mailto:ChrisGannon@creighton.edu" id="email">Email</a>
   		<div id="outputDiv" style="background-color:white">Log will Generate Here!</div>
   		<br>
