--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="manifest" href="manifest.json">
 	<link rel="script" href="js/main.js">
-	<link rel="icon" href="RunverseAppIcon.png" type="image/x-icon" />   
+	<link rel="icon" href="images/RunverseAppIcon.png" type="image/png" />   
 	<meta name="msapplication-TileColor" content="#FFFFFF">
 
 	<script LANGUAGE="JavaScript" type="text/javascript">
