--- a/index.html
+++ b/index.html
@@ -135,37 +135,37 @@
 				<input type="checkbox" id="tiredID">
 				<span class="checkmark"></span>
 			</label>
-			<label for="tiredID" id="tired">Tired</label><br>
+			<label for="tiredID" id="tired">Tired</label><br><br>
 
 			<label class="workoutContainer">
 				<input type="checkbox" id="tightnessID">
 				<span class="checkmark"></span>
 			</label>
-			<label for="tightnessID" id="tightness">Tightness</label><br>
+			<label for="tightnessID" id="tightness">Tightness</label><br><br>
 
 			<label class="workoutContainer">
 				<input type="checkbox" id="sorenessID">
 				<span class="checkmark"></span>
 			</label>
-			<label for="sorenessID" id="soreness">Soreness</label><br>
+			<label for="sorenessID" id="soreness">Soreness</label><br><br>
 
 			<label class="workoutContainer">
 				<input type="checkbox" id="fatiguedID">
 				<span class="checkmark"></span>
 			</label>
-			<label for="fatiguedID" id="fatigue">Fatigued</label><br>
+			<label for="fatiguedID" id="fatigue">Fatigued</label><br><br>
 
 			<label class="workoutContainer">
 				<input type="checkbox" id="stressedID">
 				<span class="checkmark"></span>
 			</label>
-			<label for="stressedID" id="stressed">Stressed</label><br>
+			<label for="stressedID" id="stressed">Stressed</label><br><br>
 
 			<label class="workoutContainer">
 				<input type="checkbox" id="dehydratedID">
 				<span class="checkmark"></span>
 			</label>
-			<label for="dehydrationID" id="dehydration">Dehrydrated</label><br>
+			<label for="dehydrationID" id="dehydration">Dehrydrated</label><br><br>
 
 			<label class="workoutContainer">
 				<input type="checkbox" id="injuredID">
